Egor - save file dialog was added

--- a/src/main/java/parser/MainForm.form
+++ b/src/main/java/parser/MainForm.form
@@ -78,7 +78,7 @@
         <properties>
           <model>
             <item value=".csv"/>
-            <item value=".xls"/>
+            <item value=".xlsx"/>
           </model>
         </properties>
       </component>
